<resources>
    <string name="app_name">Points of Interest</string>
    <string name="title_activity_main">Points of Interest</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">Login</string>

    <string name="navbar_camera">Camera</string>
    <string name="navbar_settings">Settings</string>
    <string name="navbar_logout">Logout</string>
    <string name="navbar_exit">Exit</string>
    <string name="store">Store</string>
    <string name="gas_station">Gas Station</string>
    <string name="library">Library</string>
    <string name="cafe">Cafe</string>
    <string name="gym">Gym</string>
    <string name="restaurant">Restaurant</string>
    <string name="meme_img_desc" />
    <string name="navbar_myPoi">My POI</string>
    <string name="ConfirmDelete">Confirm delete</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="CameraNotFound">Camera not found</string>
    <string name="FailedLogIn">Failed log in.</string>
    <string name="NoGPS">No location provider available</string>
    <string name="LocationChanged">Location changed</string>
    <string name="NewPoi">New points of interest available</string>
    <string name="title_activity_delete_this">DeleteThis</string>
    <string name="CreatePoiDialogTitle">Create Point of Interest</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="details_name">Name: </string>
    <string name="details_vicinity">Vicinity of: </string>
    <string name="details_types">Type: </string>
    <string name="btn_googlemaps">Start Google Maps </string>
</resources>
