<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/navbar_camera" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navbar_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/navbar_logout" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/navbar_exit" />
    </group>

</menu>
