<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grp16.itsmap.smapexam.app.DetailsFragment">

    <TextView
        android:id="@+id/details_poi_name"
        android:layout_width="58dp"
        android:layout_height="18dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/details_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/details_poi_vicinity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_vicinity"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/details_poi_name" />

    <TextView
        android:id="@+id/display_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/details_poi_name"
        app:layout_constraintTop_toTopOf="@+id/details_poi_name" />

    <TextView
        android:id="@+id/display_vicinity"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/details_poi_vicinity"
        app:layout_constraintTop_toTopOf="@+id/details_poi_vicinity" />

    <TextView
        android:id="@+id/details_poi_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/details_types"
        app:layout_constraintLeft_toLeftOf="@+id/details_poi_vicinity"
        app:layout_constraintTop_toBottomOf="@+id/details_poi_vicinity" />

    <TextView
        android:id="@+id/display_types"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toRightOf="@+id/details_poi_types"
        app:layout_constraintTop_toTopOf="@+id/details_poi_types" />

    <Button
        android:id="@+id/btn_gmm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_googlemaps"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />
</android.support.constraint.ConstraintLayout>
